# llama-conductor

./: .dockerignore  .gitignore  DESIGN.md  DOCS-TRUTH-MAP.md  Dockerfile  FAQ.md  NEW.md  README.md  SCP.md  START-ALL.bat  SUMM_musk-article.md  _config.yml  about.html  about.md  blog.html  docker-compose.yml  docker.env.example  feed.xml  index.html  index.md  llama_conductor_cli.py  meme-test.md  pyproject.toml  robots.txt  sitemap-index.xml  sitemap.txt  sitemap.xml  start-all.sh
.githooks/: pre-push
_layouts/: default.html
about/: index.html
blog/: No-dessert-till-after-dinner.md  SCP.md  claude-in-a-can-1.html  claude_in_a_can_1.md  i-hate-yaml.html  i-hate-yaml.md  index.html  index.md  meme-test.html  meme-test.md  no-dessert-till-after-dinner.html  scp-llm-121.html
codex/: index.md  log.md
docker/: router_config.docker.yaml
docs/: remediation.md
llama-conductor/: index.html
llama_conductor/: SUMM.md  __about__.py  arithmetic_nlp.py  chat_aliases.py  chat_dispatch.py  chat_facts.py  chat_finalize.py  chat_mode_execution.py  chat_modes.py  chat_postprocess.py  chat_preflight.py  chat_profile_state.py  chat_semantic.py  cheatsheets_runtime.py  cli.py  codex_runtime.py  codex_update.py  command_cheat_sheet.md  config.py  consistency_verifier.py  correction_bind.py  currency_sum.py  encoder_server.py  fs_rag.py  fun.py  fun_style.py  generate_models_preset.py  helpers.py  ingest.py  interaction_profile.py  judge_worker.py  kaioken.py  kaioken.py.pre_vuh_distress_tune  kaioken_asset_loader.py  kaioken_classify.py  kaioken_guards.py  kaioken_literal.py  (+36 more)
(+64 files in other folders)
